lvl_user/ingress/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo-ingress
  name: goweb-svc
spec:
  selector:
    app: goapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
